Cleaning up the pom.xml files.