@@ -8,13 +8,13 @@
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>clara-demo</artifactId>
+	<packaging>war</packaging>
+	
 	<name>Clara demo</name>
 	<description>Demo for Clara</description>
 	<url>https://github.com/tehapo/Clara</url>
-	<packaging>war</packaging>
 
 	<dependencies>
-		<!-- Vaadin dependencies -->
 		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin</artifactId>
@@ -27,16 +27,25 @@
 		<dependency>
 			<groupId>org.vaadin.addons</groupId>
 			<artifactId>ratingstars</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
+			<version>1.4</version>
 		</dependency>
 	</dependencies>
+	
+	<repositories>
+		<repository>
+			<id>vaadin-addons</id>
+			<url>http://maven.vaadin.com/vaadin-addons</url>
+		</repository>
+	</repositories>
 
 	<build>
 		<plugins>
+			<!-- Plugins inherited from the parent -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+			
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
@@ -46,9 +55,19 @@
 					<contextPath>/</contextPath>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>gwt-maven-plugin</artifactId>
+				<version>2.3.0-1</version>
+				<configuration>
+					<webappDirectory>src/main/webapp/VAADIN/widgetsets</webappDirectory>
+					<extraJvmArgs>-Xmx1024M -Xss512m -XX:MaxPermSize=1024M</extraJvmArgs>
+					<noServer>true</noServer>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
-	
+    
 	<developers>
 		<developer>
 			<id>tehapo</id>
@@ -73,159 +92,4 @@
 		<developerConnection>scm:git:git@github.com:tehapo/Clara.git</developerConnection>
 		<url>https://github.com/tehapo/Clara</url>
 	</scm>
-	<reporting>
-		<plugins>
-			<plugin>
-				<artifactId>maven-javadoc-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<artifactId>maven-changelog-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<artifactId>maven-changes-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<configuration>
-					<quiet>true</quiet>
-					<links>
-						<link>http://java.sun.com/j2ee/1.4/docs/api</link>
-						<link>http://java.sun.com/j2se/1.5.0/docs/api</link>
-						<link>http://java.sun.com/j2se/1.6.0/docs/api</link>
-						<link>http://commons.apache.org/collections/apidocs-COLLECTIONS_3_0/</link>
-						<link>http://commons.apache.org/dbcp/apidocs/</link>
-						<link>http://commons.apache.org/fileupload/apidocs/</link>
-						<link>http://commons.apache.org/httpclient/apidocs/</link>
-						<link>http://commons.apache.org/logging/apidocs/</link>
-						<link>http://commons.apache.org/pool/apidocs/</link>
-						<link>http://junit.sourceforge.net/javadoc/</link>
-						<link>http://logging.apache.org/log4j/1.2/apidocs/</link>
-						<link>http://jakarta.apache.org/regexp/apidocs/</link>
-						<link>http://velocity.apache.org/engine/releases/velocity-1.5/apidocs/</link>
-						<link>http://maven.apache.org/ref/current/maven-artifact/apidocs/</link>
-						<link>http://maven.apache.org/ref/current/maven-artifact-manager/apidocs/</link>
-						<link>http://maven.apache.org/ref/current/maven-model/apidocs/</link>
-						<link>http://maven.apache.org/ref/current/maven-plugin-api/apidocs/</link>
-						<link>http://maven.apache.org/ref/current/maven-project/apidocs/</link>
-						<link>http://maven.apache.org/ref/current/maven-reporting/maven-reporting-api/apidocs/</link>
-						<link>http://maven.apache.org/ref/current/maven-settings/apidocs/</link>
-					</links>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-jxr-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-project-info-reports-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>taglist-maven-plugin</artifactId>
-				<version>2.4</version>
-			</plugin>
-		</plugins>
-	</reporting>
-	
-	<profiles>
-		<profile>
-			<id>extract-vaadin</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-dependency-plugin</artifactId>
-						<version>2.3</version>
-						<executions>
-							<execution>
-								<id>unpack</id>
-								<phase>test</phase>
-								<goals>
-									<goal>unpack</goal>
-								</goals>
-								<configuration>
-									<artifactItems>
-										<artifactItem>
-											<groupId>com.vaadin</groupId>
-											<artifactId>vaadin</artifactId>
-											<version>${vaadin.version}</version>
-											<type>jar</type>
-											<overWrite>false</overWrite>
-											<!-- <outputDirectory>${project.build.directory}/${project.build.finalName}</outputDirectory> -->
-											<outputDirectory>src/main/webapp</outputDirectory>
-											<!-- <destFileName>optional-new-name.jar</destFileName> -->
-											<includes>VAADIN/**</includes>
-											<!-- <excludes>**/*test.class</excludes> -->
-										</artifactItem>
-									</artifactItems>
-									<includes>**/*.java</includes>
-									<excludes>**/*.properties</excludes>
-									<outputDirectory>${project.build.directory}/wars</outputDirectory>
-									<overWriteReleases>false</overWriteReleases>
-									<overWriteSnapshots>true</overWriteSnapshots>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>compile-widgetset</id>
-			<build>
-				<plugins><!-- Compile custom GWT components or widget dependencies with 
-						the GWT compiler -->
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>gwt-maven-plugin</artifactId>
-						<version>2.3.0-1</version>
-						<configuration>
-							<webappDirectory>src/main/webapp/VAADIN/widgetsets</webappDirectory>
-							<extraJvmArgs>-Xmx512M -Xss1024k -Djava.awt.headless=true</extraJvmArgs>
-							<runTarget>expjpa</runTarget>
-							<hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
-							<noServer>true</noServer>
-							<port>8080</port>
-							<compileReport>false</compileReport>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>resources</goal>
-									<goal>compile</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>com.vaadin</groupId>
-						<artifactId>vaadin-maven-plugin</artifactId>
-						<version>1.0.1</version>
-						<executions>
-							<execution>
-								<configuration><!-- if you don't specify any modules, the plugin 
-										will find them --><!-- <modules> <module>${package}.gwt.MyWidgetSet</module> 
-										</modules> -->
-								</configuration>
-								<goals>
-									<goal>update-widgetset</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 </project>
-
